tests/snapshots/examples_fixtures/diagnostics__errors__module_invalid_content_import_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/module_invalid_content_import_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Errors.ModuleInvalidContentError` to import.

  examples/diagnostics/errors/module_invalid_content_import_error.flx:3:1
  |
3 | import Errors.ModuleInvalidContentError
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Errors.ModuleInvalidContentError.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Errors.ModuleInvalidContentError` under roots: examples/diagnostics/errors, src, lib (imported from examples/diagnostics/errors/module_invalid_content_import_error.flx).
== stdout ==
<not executed>
